<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/container"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo_dyd_mobile" />

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:alpha=".6"
            android:background="@color/black" />


        <EditText
            android:id="@+id/user"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/custom_input"
            android:hint="@string/user"
            android:inputType="text"
            android:paddingStart="6dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="13sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/custom_input"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="6dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="13sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/custom_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/confirmPasswd"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/passwd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/custom_input"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="13sp" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30sp"
            android:background="@drawable/button_style"
            android:text="@string/register"
            android:textColor="@color/white" />

    </RelativeLayout>


</RelativeLayout>